--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-    <body>
-        {% include 'header.html' %}
-        <div class="container.position-relative.px-4.px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-6">
-                    <button type="button" class="btn btn-primary">Test Button</button>
-                </div>
-            </div>
-        </div>
+ {% include 'header.html' %}
+
+ <div class="container.position-relative.px-4.px-lg-5">
+     <div class="row gx-4 gx-lg-5 justify-content-center">
+         <div class="col-md-10 col-lg-8 col-xl-6">
+             <button type="button" class="btn btn-primary">Test Button</button>
+         </div>
+     </div>
+ </div>
 
 
 
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-    </body>
-</html>
+ <!-- Bootstrap core JS-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+ <!-- Core theme JS-->
+
+ {% include 'footer.html' %}
