--- a/templates/header.html
+++ b/templates/header.html
@@ -38,7 +38,13 @@
                             <a
                               class="nav-link px-lg-3 py-3 py-lg-4"
                               href="{{ url_for('index') }}"
-                              >Home</a>
+                            >Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a
+                               class="nav-link px-lg-3 py-3 py-lg-4"
+                               href="{{ url_for('about_me') }}"
+                            >About me</a>
                         </li>
                     </ul>
                 </div>
