--- a/templates/header.html
+++ b/templates/header.html
@@ -11,9 +11,7 @@
         <!-- Load Bootstrap-Flask CSS -->
         {{ bootstrap.load_css() }}
         <!-- Bootstrap CSS -->
-        <link
-            rel="stylesheet"
-            href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
         <!-- Navigation bar -->
