--- a/templates/header.html
+++ b/templates/header.html
@@ -44,6 +44,10 @@
                                href="{{ url_for('about_me') }}"
                             >About me</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="{{ url_for('contact_me') }}" class="nav-link px-lg-3 py-3 py-lg-">
+                                Contact me</a>
+                        </li>
                     </ul>
                 </div>
             </div>
