--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="small text-center text-muted fst-italic">
-                        Copyright &copy; Szymon Tomasiak 2025
+                        Copyright &copy; Szymon Tomasiak {{ year }}
                     </div>
                 </div>
             </div>
