Fix issue with not fully aligned nav-items (last one in particular)

--- a/templates/header.html
+++ b/templates/header.html
@@ -45,7 +45,7 @@
                             >About me</a>
                         </li>
                         <li class="nav-item">
-                            <a href="{{ url_for('contact_me') }}" class="nav-link px-lg-3 py-3 py-lg-">
+                            <a href="{{ url_for('contact_me') }}" class="nav-link px-lg-3 py-3 py-lg-4">
                                 Contact me</a>
                         </li>
                     </ul>
