Create base.html file to make life easier. Refactor html files to use base.html

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -1,9 +1,9 @@
-{% include 'header.html' %}
+{% extends 'base.html'%}
 
+{% block content %}
 <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <p class="h2">About me</p>
     </div>
 </div>
-
-{% include 'footer.html' %}
+{% endblock %}
