--- a/templates/contact-me.html
+++ b/templates/contact-me.html
@@ -1,6 +1,7 @@
 {% from 'bootstrap5/form.html' import render_form %}
-{% include 'header.html' %}
+{% extends 'base.html' %}
 
+{% block content %}
 <div class="container">
     <div class="row">
         {% with messages = get_flashed_messages() %}
@@ -21,4 +22,4 @@
     </div>
 </div>
 
-{% include 'footer.html' %}
+{% endblock %}
