Refactor files so they will be using .container and .row from base.html

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -1,9 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<div class="container position-relative px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
+    <div class="col-lg-8 col-md-10 col-xs-12">
         <p class="h2">About me</p>
     </div>
-</div>
 {% endblock %}
