--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,11 @@
 {% include 'header.html' %}
 
-{% block content%}
-{% endblock %}
+<div class="container position-relative px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        {% block content%}
+        {% endblock %}
+    </div>
+</div>
 
 
 {% include 'footer.html' %}
