--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container position-relative px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-        {% with messages = get_flashed_messages() %}
-           {% if messages %}
-               <div class="col-lg-8 col-md-10 mx-auto">
-                   {% for message in messages %}
-                       <div class="text-danger">
-                           {{ message }}
-                       </div>
-                   {% endfor %}
-               </div>
-           {% endif %}
-       {% endwith %}
-        <div class="col-md-10 col-lg-8 col-xl-6">
-            <button type="button" class="btn btn-primary">Test Button</button>
-        </div>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <div class="col-lg-8 col-md-10 mx-auto">
+                {% for message in messages %}
+                    <div class="text-danger">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
+    <div class="col-lg-8 col-md-10 col-xs-12">
+        <button type="button" class="btn btn-primary">Test Button</button>
     </div>
-</div>
 
 {% endblock %}
