--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="col-lg-8 col-md-10 col-xs-12">
+        <h2>There will be my projects</h2>
+    </div>
 {% endblock %}
