Add nav-item for projects subpage

--- a/templates/header.html
+++ b/templates/header.html
@@ -40,6 +40,12 @@
                         </li>
                         <li class="nav-item">
                             <a
+                              class="nav-link px-lg-3 py-3 py-lg-4"
+                              href="{{ url_for('get_all_projects') }}"
+                            >Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a
                                class="nav-link px-lg-3 py-3 py-lg-4"
                                href="{{ url_for('about_me') }}"
                             >About me</a>
