--- a/templates/header.html
+++ b/templates/header.html
@@ -10,8 +10,7 @@
         {% endblock %}
         <!-- Load Bootstrap-Flask CSS -->
         {{ bootstrap.load_css() }}
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     </head>
     <body>
         <!-- Navigation bar -->
