--- a/templates/header.html
+++ b/templates/header.html
@@ -10,11 +10,12 @@
         {% endblock %}
         <!-- Load Bootstrap-Flask CSS -->
         {{ bootstrap.load_css() }}
+        <!-- Core theme CSS -->
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     </head>
     <body>
         <!-- Navigation bar -->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light constant-box" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a href="/" class="navbar-brand">Portfolio</a>
                 <button
