--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
         <!-- Footer -->
-        <footer class="border-top constant-box">
+        <footer class="border-top fixed-bottom constant-box">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="small text-center text-muted fst-italic">
