--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="widthh=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta name="description" content="Portfolio Website">
         <meta name="author" content="Szymon Tomasiak">
         <title>Portfolio Website</title>
@@ -12,10 +12,15 @@
         {{ bootstrap.load_css() }}
         <!-- Core theme CSS -->
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+        <!-- Font Awesome icons (free version)-->
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
     </head>
     <body>
         <!-- Navigation bar -->
-        <nav class="navbar navbar-expand-lg navbar-light constant-box" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a href="/" class="navbar-brand">Portfolio</a>
                 <button
