--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
         <footer class="border-top fixed-bottom">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="small text-center text-muted fst-italic">
+                    <div class="small text-center fst-italic">
                         Copyright &copy; Szymon Tomasiak {{ year }}
                     </div>
                 </div>
