Develop hero section. Add profile image

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -4,13 +4,19 @@
     <div class="col-lg-8 col-md-10 col-xs-12">
         <div class="hero">
             <p class="name">Szymon Tomasiak</p>
-            <p class="tagline">There will be tagline</p>
+            <p class="tagline">Turning Complexity into Simplicity with Python.</p>
             <div class="row">
-                <div class="col-lg-4 col-md-5 col-xs-6">
-                    <img src="{{ url_for('static', filename='') }}" alt="picture" class="rounded-circle shadow-4-strong"/>
+                <div class="col-lg-6 col-md-8 col-xs-12">
+                    <img src="{{ url_for('static', filename='assets/img/profilowe.jpg') }}" alt="picture" class="rounded-circle shadow-4-strong"/>
                 </div>
-                <div class="col-lg-4 col-md-5 col-xs-6">
-                    <div class="introduction">There will be intro</div>
+                <div class="col-lg-6 col-md-8 col-xs-12">
+                    <div class="introduction">
+                        👋 Hey there! I'm Szymon, a Python Developer.<br/>
+                        I specialize in backend development while also being familiar with frontend technologies. Passionate about problem-solving and clean code, I thrive on tackling new challenges and transforming complex ideas into simple, efficient solutions.
+                        <br/><br/>
+                        🚀 Check out my projects and feel free to reach out if you have any questions or ideas for collaboration!<br>
+                        <a>View My Projects</a> | <a>Contact Me</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -26,10 +32,5 @@
         <div class="education">
             There will be education section
         </div>
-        <a href="url_for('contact_me')">
-            <button class="btn btn-success btn-lg btn-block">
-                Contact me
-            </button>
-        </a>
     </div>
 {% endblock %}
