Break text to better readability, add redrections to anchor tags, add emojis

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -15,7 +15,7 @@
                         I specialize in backend development while also being familiar with frontend technologies. Passionate about problem-solving and clean code, I thrive on tackling new challenges and transforming complex ideas into simple, efficient solutions.
                         <br/><br/>
                         🚀 Check out my projects and feel free to reach out if you have any questions or ideas for collaboration!<br>
-                        <a>View My Projects</a> | <a>Contact Me</a>
+                        🔹 <a href="{{ url_for('get_all_projects') }}">View My Projects</a> | 📩 <a href="{{ url_for('contact_me') }}">Contact Me</a>
                     </div>
                 </div>
             </div>
