Add skills to the skills section (skills will be adjusted in further development)

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -24,7 +24,23 @@
             There will be bio section
         </div>
         <div class="skills">
-            There will be skills section
+            <div class="row">
+                <div class="col">
+                    Python <i class="fab fa-python"></i>
+                </div>
+                <div class="col">
+                    SQL <i class="fas fa-database"></i>
+                </div>
+                <div class="col">
+                    HTML <i class="fab fa-html5"></i>
+                </div>
+                <div class="col">
+                    CSS <i class="fab fa-css3-alt"></i>
+                </div>
+                <div class="col">
+                    C# <i class="fas fa-code"></i>
+                </div>
+            </div>
         </div>
         <div class="experience">
             There will be experience section
