Add progress bars to skills

--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -24,21 +24,39 @@
             There will be bio section
         </div>
         <div class="skills">
+            <ul class="list-unstyled">
+                <li></li>
+            </ul>
             <div class="row">
                 <div class="col">
                     Python <i class="fab fa-python"></i>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
                 <div class="col">
                     SQL <i class="fas fa-database"></i>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
                 <div class="col">
                     HTML <i class="fab fa-html5"></i>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
                 <div class="col">
                     CSS <i class="fab fa-css3-alt"></i>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
                 <div class="col">
                     C# <i class="fas fa-code"></i>
+                    <div class="progress">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
             </div>
         </div>
