--- a/templates/header.html
+++ b/templates/header.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <!-- Navigation bar -->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a href="/" class="navbar-brand">Portfolio</a>
                 <button
