--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="col-lg-8 col-md-10 col-xs-12">
-        <div class="hero">
+        <section class="hero">
             <p class="name">Szymon Tomasiak</p>
             <p class="tagline">Turning Complexity into Simplicity with Python.</p>
             <div class="row">
@@ -19,11 +19,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="bio">
+        </section>
+        <section class="bio">
             There will be bio section
-        </div>
-        <div class="skills">
+        </section>
+        <section class="skills">
+            <h2 class="font-weight-bold">Skills</h2>
             <ul class="list-unstyled">
                 <li></li>
             </ul>
@@ -59,12 +60,27 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="experience">
+        </section>
+        <section class="experience">
             There will be experience section
-        </div>
-        <div class="education">
-            There will be education section
-        </div>
+        </section>
+        <section class="education">
+            <h2 class="font-weight-bold">Education</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Programmer Technician Degree</h3>
+                        <h5>Zespół Szkół Ekonomicznych im. Mikołaja Kopernika w Olsztynie</h5>
+                        <p>Description of the degree and achievements.</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>The Qualification Vocational Course INF.02</h3>
+                        <h5>Warmińsko-Mazurski Zakład Doskonalenia Zawodowego w Olsztynie</h5>
+                        <p>Description of the degree and achievements.</p>
+                    </div>
+            </div>
+        </section>
     </div>
 {% endblock %}
