--- a/templates/about-me.html
+++ b/templates/about-me.html
@@ -70,16 +70,17 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Programmer Technician Degree</h3>
-                        <h5>Zespół Szkół Ekonomicznych im. Mikołaja Kopernika w Olsztynie</h5>
+                        <h5>Zespół Szkół Ekonomicznych im. Mikołaja Kopernika w Olsztynie, 2019 - 2024</h5>
                         <p>Description of the degree and achievements.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>The Qualification Vocational Course INF.02</h3>
-                        <h5>Warmińsko-Mazurski Zakład Doskonalenia Zawodowego w Olsztynie</h5>
+                        <h5>Warmińsko-Mazurski Zakład Doskonalenia Zawodowego w Olsztynie, 2024 - 2025</h5>
                         <p>Description of the degree and achievements.</p>
                     </div>
+                </div>
             </div>
         </section>
     </div>
