--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,7 +16,8 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.navbar-nav .nav-link:hover {
+.navbar-nav .nav-link:hover,
+.navbar .navbar-toggler:hover {
     color: #a79277;
 }
 
