Build structure for Home Page

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
         {% endif %}
     {% endwith %}
     <div class="col-lg-8 col-md-10 col-xs-12">
+        <section class="hero"></section>
+        <section class="about-me"></section>
+        <section class="featured-projects"></section>
+        <section class="contact"></section>
     </div>
 
 {% endblock %}
